--- a/vignettes/combiroc.Rmd
+++ b/vignettes/combiroc.Rmd
@@ -79,12 +79,12 @@ Since the target of the analysis is the identification of marker combinations ca
 - Positively select most samples belonging to the case class ("A" in this case), which values must be above the signal threshold.
 - Negatively select most control samples ("B"), which values must be below the signal threshold. 
 
-Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the `markers_distribution()` have been implemented. This function takes as input data in long format ("*data_long*"), and returns a named list (here assigned to the '*dist*' object). Specific warnings are ususlly triggered with this command remembering the users a few default parameters that are in place durinf the computation. 
+Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the `markers_distribution()` have been implemented. This function takes as input data in long format ("*data_long*"), and returns a named list (here assigned to the '*distr*' object). Specific warnings are ususlly triggered with this command remembering the users a few default parameters that are in place durinf the computation. 
 
 ```{r}
-dist <- markers_distribution(data_long, case_class = 'A', y_lim = 0.0015, x_lim = 3000, signalthr_prediction = TRUE, min_SE = 40, min_SP = 80, boxplot_lim = 2000)
+distr <- markers_distribution(data_long, case_class = 'A', y_lim = 0.0015, x_lim = 3000, signalthr_prediction = TRUE, min_SE = 40, min_SP = 80, boxplot_lim = 2000)
 ```
-The `dist` object contains the following elements: 
+The `distr` object contains the following elements: 
 
 - a Boxplot distribution
 - a ROC curve
@@ -96,26 +96,26 @@ All this information can be plotted/displayed individually.
 
 The __Boxplot__ shows the distribution of each marker values for both classes:
 ```{r, boxplot}
-dist$Boxplot
+distr$Boxplot
 ```
 
 The __ROC__ curve shows how many real positive samples would be found positive (SE) and how many real negative samples would be found negative (SP) in function of signal threshold. NB: these SE and SP are refereed to the signal intensity threshold considering all the markers together; it is NOT equal to the SE/SP of a single marker/combination (shown later in **Sensitivity and specificity**).
 ```{r, ROC}
-distribution$ROC
+distr$ROC
 ```
 The __Coord__ is a dataframe that contains the coordinates of the above described "ROC" (threshold, SP and SE) that have at least a min SE (40 by default) and a min SP (80 by default). These limits can be set manually by specifying  min_SE and min_SP.
 ```{r, coord}
-distribution$Coord
+distr$Coord
 ```
 
 The __Density_plot__ shows the distribution of the signal intensity values for both the classes. In addition, the function allows the user to set both the y_lim and x_lim values to provide a better visualization.
 ```{r, density}
-distribution$Density_plot
+distr$Density_plot
 ```
 
 Finally, the __Density_summary__ displays summary statistics of the density plot:
 ```{r, summary}
-distribution$Density_summary
+distr$Density_summary
 ```
 
 In case of lack of a priori known threshold the user can set set signalthr_prediction= TRUE. In this way the function provides a "suggested signal threshold" that corresponds to the median of the singnal threshold values (in "Coord") at which SE/SP are greater or equal to their set minimal values (min_SE and min_SP), and it adds this threshold on the "Density_plot" object as a dashed black line. The use of the median allows to pick a threshold whose SE/SP are not too close to the limits (min_SE and min_SP), but it is recommended to always inspect "Coord" and choose the most appropriate signal threshold by considering SP, SE and Youden index.
